--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 body {
     margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
     background-image: url("img/tape.jpg");
     color: black;
     font-family: "Lilita One", cursive;
     text-shadow: -1px 0 #f7c217, 0 1px #f7c217, 1px 0 #f7c217, 0 -1px #f7c217;
+}
+nav{
+    min-height: 100px;
+    position: relative;
 }
 
 h1 {
@@ -66,6 +73,12 @@ p {
     margin-top: 10px;
     letter-spacing: 5px;
 }
+footer{
+    position: absolute;
+    height: 50px;
+    bottom: 0;
+    width: 100%;
+}
 
 #first_page {
     margin-top: 200px;
@@ -77,7 +90,7 @@ p {
 
 #first_page h1 {
     font-size: 55px;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
 }
 
 #first_page a {
@@ -106,8 +119,7 @@ p {
 }
 
 .about_me {
-    text-align: center;
-    margin-top: 350px;
+    height: 50px;
 }
 
 .about_me button {
